--- a/day0.Rmd
+++ b/day0.Rmd
@@ -2,4 +2,148 @@
 title: "Day 0"
 ---
 
-Materials for Day 0
+## Data structures
+
+In any programming language, all data structures are built from the ground up using basic building blocks.  In R, the most frequently used are logical, integer, double (numeric), and character.  From these we build increasingly complex data structures, adapted to hold whatever type of data we are interested in.
+
+### Vectors
+
+Let's start with vectors, the most of R's data structures.
+
+#### Atomic vectors
+
+Atomic vectors are 1-dimensional data structures that must be all the same type
+
+```{r}
+# Logical
+logical_vector = c(TRUE, FALSE, TRUE)
+
+# Integer
+int_vector = c(1L, 3L, 6L)
+
+# Double
+num_vector = c(3.4, 493.22, 239992.229)
+
+# Character
+char_vector = c("Do", "you", "love", "cats", "?")
+
+```
+
+A couple of points on atomic vectors:
+
+* They are constructed using the `c()` function
+* To specify an integer use the L suffix
+* A vector must be the all the same type
+* Use `typeof()` to see what type you have or an "is" function to check type
+
+```{r}
+typeof(int_vector)
+is.character(char_vector)
+is.numeric(logical_vector)
+```
+
+
+#### Lists
+
+A list is like an atomic vector but each item in the list can be any type, including other lists, atomic vectors, data frames, or matrices. Use `list()` to make a list.
+
+```{r}
+im_a_list = list("meow", 12, c(4, 5, 10), logical_vector, list("I have 10 cats", FALSE))
+str(im_a_list)
+```
+Lists are very powerful and although confusing at first it is worth spending time learning how to use them.  In particular when we come to the "apply" family of functions we will see how lists can make our lives much easier.
+
+### Factors
+
+Ah, the dreaded factors!  They are used to store categorical variables and although it is tempting to think of them as character vectors this is a dangerous mistake (you will get scratched, badly!).  Factors make perfect sense if you are a statician designing a programming language (!) but to everyone else they exist soley to torment us with confusing errors.  
+
+A factor is really just an integer vector with an additional attribute, `levels()`, which defines the possible values.
+
+```{r}
+crazy_factor = factor(c("up", "down", "down", "sideways", "up"))
+crazy_factor
+
+levels(crazy_factor)
+as.integer(crazy_factor)
+```
+But why not just use character vectors, you ask?  Believe it or not factor do have some useful properties.  For example factors allow you to specify all possible values a variable may take even if those values are not in your dataset.
+
+```{r}
+cool_animals = c("cat", "cat", "dog", "dog")
+cool_animals_factor = factor(cool_animals, levels = c("cat", "dog", "bunny"))
+
+table(cool_animals_factor)
+
+```
+
+But for the most part factors are important for various statistics involving categorical variables, as you'll see for things like linear models.  Love 'em or hate 'em, factors are integral to using R so better learn 'em.
+
+### Matrices
+
+A matrix is a 2-dimensional vector and like atomic vector must be all of a single type.
+
+```{r}
+mat = matrix(1:12, ncol = 4, nrow = 3)
+mat
+
+nrow(mat)
+ncol(mat)
+```
+
+Matrices can have row and column names
+
+```{r}
+colnames(mat) = c("A", "B", "C", "D")
+rownames(mat) = c("cat", "tiger", "lion")
+mat
+```
+
+
+### Data frames
+
+And now for the finale - data frames!  Data frames are very powerful data structures in R and will play a central role in most of the work you'll do.  These are probably the most familiar data structures to most people as they resemble spreadsheets quite closely, at least on the surface.
+
+You can think of data frame as a set of identically sized lists lined up together in columns with a few key features.  Each column must be of the same type but column types can be any of the basic data types (character, integer, etc).  This makes them very useful for structured heterogeneus data, like what many of you generate in the lab everyday.  However, it is very important to remember that they are not spreadsheets and to use them effectively you need to forget everything you've learned about Excel (which is probably a good idea anyway).
+
+```{r}
+# here let's use a data frame that comes built in to R
+str(iris)
+```
+
+Notice the `$` notation, similar to what we saw for lists.  We can use this to extract singe columns.
+
+
+```{r}
+iris$Sepal.Length
+```
+
+Alternitivaly,
+
+```{r}
+iris[["Sepal.Length"]]
+```
+
+And now for some basic indexing.
+
+```{r}
+# get the first 3 rows of the last 2 columns
+iris[1:3, 4:5]
+
+# get the 10th row of the 'Petal.Width' column
+iris[10, "Petal.Width"]
+
+# get the entire 4th row
+iris[4, ]
+```
+
+We'll do more indexing in the next session but for now here a couple of key points about indexing.  
+
+* The square brackets `[]` are used to index
+* Row is first then column `[row, column]`
+* Rows and columns can be indexed by names, with a character vector, although you'll see this much more commonly for columns, rather than rows.
+* When indexing by integer, you can use a single value `3`, a vector `c(1, 3, 8)`, or a range `2:10`.
+* Indexing in R starts at 1.  This is different than most programming languages such as python where indexing begins at 0.  For those new to programming this makes more sense but those with programming experience may find this frustrating.
+
+
+## How to get help and deal with errors
+
