--- a/day0.Rmd
+++ b/day0.Rmd
@@ -2,6 +2,11 @@
 title: "Day 0"
 ---
 
+```{r, message=FALSE, echo=FALSE}
+library(knitr)
+opts_chunk$set(collapse = TRUE)
+```
+
 ## Data structures
 
 In any programming language, all data structures are built from the ground up using basic building blocks.  In R, the most frequently used are logical, integer, double (numeric), and character.  From these we build increasingly complex data structures, adapted to hold whatever type of data we are interested in.
@@ -38,7 +43,9 @@ A couple of points on atomic vectors:
 
 ```{r}
 typeof(int_vector)
+
 is.character(char_vector)
+
 is.numeric(logical_vector)
 ```
 
@@ -48,8 +55,9 @@ is.numeric(logical_vector)
 A list is like an atomic vector but each item in the list can be any type, including other lists, atomic vectors, data frames, or matrices. Use `list()` to make a list.
 
 ```{r}
-im_a_list = list("meow", 12, c(4, 5, 10), logical_vector, list("I have 10 cats", FALSE))
-str(im_a_list)
+my_list = list("meow", 12, c(4, 5, 10), logical_vector, list("I have 10 cats", FALSE))
+
+str(my_list)
 ```
 Lists are very powerful and although confusing at first it is worth spending time learning how to use them.  In particular when we come to the "apply" family of functions we will see how lists can make our lives much easier.
 
@@ -61,15 +69,18 @@ A factor is really just an integer vector with an additional attribute, `levels(
 
 ```{r}
 crazy_factor = factor(c("up", "down", "down", "sideways", "up"))
-crazy_factor
+
+print(crazy_factor)
 
 levels(crazy_factor)
+
 as.integer(crazy_factor)
 ```
 But why not just use character vectors, you ask?  Believe it or not factor do have some useful properties.  For example factors allow you to specify all possible values a variable may take even if those values are not in your dataset.
 
 ```{r}
 cool_animals = c("cat", "cat", "dog", "dog")
+
 cool_animals_factor = factor(cool_animals, levels = c("cat", "dog", "bunny"))
 
 table(cool_animals_factor)
@@ -84,9 +95,11 @@ A matrix is a 2-dimensional vector and like atomic vector must be all of a singl
 
 ```{r}
 mat = matrix(1:12, ncol = 4, nrow = 3)
-mat
+
+print(mat)
 
 nrow(mat)
+
 ncol(mat)
 ```
 
@@ -94,8 +107,10 @@ Matrices can have row and column names
 
 ```{r}
 colnames(mat) = c("A", "B", "C", "D")
+
 rownames(mat) = c("cat", "tiger", "lion")
-mat
+
+print(mat)
 ```
 
 
@@ -107,6 +122,8 @@ You can think of data frame as a set of identically sized lists lined up togethe
 
 ```{r}
 # here let's use a data frame that comes built in to R
+head(iris)
+
 str(iris)
 ```
 
@@ -146,4 +163,89 @@ We'll do more indexing in the next session but for now here a couple of key poin
 
 
 ## How to get help and deal with errors
+
+### Where to get help
+
+#### Built-in help
+
+R-package authors are required to document their functions although this happens at a various levels of usefulness.  Simply type `?function_name` to get help on a function. Type `??function` to do a fuzzy search.  Look carefully what parameters the function requires and what type they are.  Some are required (listed first, no default) and some are optional (a default value is usually listed).  Most function help will also indicate what the function returns.  Good documentation also has more information on what the function is doing.
+
+Package manuals (required for both CRAN and Bioconductor) are all of these function help pages gathered together in one place.
+
+#### Vignettes
+
+Vignettes (required for Bioconductor packages, but not CRAN) are longer form documentation usually in the form of a tutorial or example usage.  These can be extremely helpful and are usually the best place to start when working with a new package.  For example the limma (linear models for microarrays) vignette is a small book and an excellent resource on learning how to analyze micorarrays (and RNA-seq).  Vignettes can be found by typing `browseVignettes("packageName")` in your console or on the Bioconductor web page for a package. 
+
+#### Elsewhere
+
+Sometimes authors will provide more detailed documenation online.  This is more common for more recent packages where the authors may have a github repository and associated webpage.  Often discussion pages (Google groups, Github) can also be a useful source of helpt
+
+### Errors
+
+#### __GOOGLE IT!!!__
+
+If you email me with an error I haven't seen, the first thing I will do is google it.  If you go ahead and post a question on a forum when an easy answer can be found by googling don't be surprised for an unpleasent response.
+
+But sometimes an easy answer can't be found so here's a quick process to walk through:
+
+1.  Re-read the error and then think about it for a minute.  See if you can't get a grasp on what's really going wrong.
+2.  Check your code for errors.  Spelling errors, misplaced commas, forgotten paranthesis can all cause problems
+3.  Look it up - I very, very rarely get an error that someone else hasn't seen before.
+4.  If you still can't find a solution then you can ask for help.  Make friends in this class - get an R buddy.  I can answer brief questions or you can post questions online at StackOverflow.  Sometimes package developers have specific discussion groups on Google groups or Github.  These can be very useful.
+
+To get you started here are few of the more common errors you might see:
+
+Think about what is going wrong for each of these.  
+
+
+```{r, error=TRUE}
+my_object
+```
+Hint: Type `ls()`
+
+
+```{r, error=TRUE}
+iris[, 6]
+```
+Hint:  How many columns does the `iris` data frame have?
+
+
+```{r, error=TRUE}
+sample[1:10,]
+```
+Hint:  What does `typeof(sample)` give you? What about `sample(10)`?  Or `?sample`
+
+
+```{r, error=TRUE}
+mat[4, 2]
+```
+Hint: What are the dimensions (`dim()`) of `mat`?
+
+
+```{r, error=TRUE}
+pet_a_cat()
+```
+Hint:  This one is pretty self-explanatory
+
+
+```{r, error=TRUE}
+nothing = NA
+if (nothing == NA) {
+	print("empty")
+}
+```
+Hint:  What does `nothing == NA` give you?  How about `is.na(nothing)`?
+
+
+```{r, error=TRUE}
+my_data = read.table("mydata.txt")
+```
+Hint: Read the error message carefully.
+
+
+```{r, error=TRUE}
+x = data.frame(y = NULL)
+x$y = 1:4
+```
+Hint: How many rows does `x` have?
 
