--- a/2_understanding_R.Rmd
+++ b/2_understanding_R.Rmd
@@ -208,8 +208,9 @@ any(is.na(x))
 some_values = c(1,2,3,4)
 3 %in% some_values
 
-# The %in% function retuns TRUE or FALSE for every value on the left-hand side depending on if a match is found
-# on the right hand side.  This can be useful for if statements but only if it returns a single TRUE/FALSE
+# The %in% function retuns TRUE or FALSE for every value on the left-hand side depending on if a
+# match is found on the right hand side.  This can be useful for if statements but only if it
+# returns a single TRUE/FALSE
 
 test_values = c(0,3,5)
 if (test_values %in% some_values) {
@@ -303,9 +304,10 @@ rm("+")
 5 + 5
 ```
 
-Why does this work?  Hint: Thing about where R looks first to find objects.
+Why does this work?  Hint: Think about where R looks first to find objects.
 
 Some tips:
+
 * Always start your analysis in a new environment
 * Never save your workspace (R asks you about this when quitting, always say no)
 * Don't analyze different projects in the same environment.
@@ -325,13 +327,13 @@ Some common ways to subset dataframes
 head(iris)
 
 # just the species column
-iris$Species
+head(iris$Species)
 
 # 3rd row and all columns
 iris[3, ]
 
 # 3rd column and all rows
-iris[, 3]
+head(iris[, 3])
 
 # 4th row and 2nd column
 iris[4, 2]
@@ -344,15 +346,17 @@ Using vectors
 
 ```{r}
 # predfined vector
-rows_to_keep = c(2, 4, 7, 9)
-iris[rows_to_keep, ]
+rows_to_keep = sample(1:nrow(iris), size = 10)
+new_iris = iris[rows_to_keep, ]
+new_iris
 
-# logicals work to
-iris$Species == "setosa"
-iris[iris$Species == "setosa", ]
+# logicals work too
+new_iris$Species == "setosa"
+
+new_iris[new_iris$Species == "setosa", ]
 ```
 
-Homework: Read the [subsetting](http://adv-r.had.co.nz/Subsetting.html) chapter in Advanced R
+For more details on subsetting read the [subsetting](http://adv-r.had.co.nz/Subsetting.html) chapter in Advanced R
 
 ## Loops and apply
 
@@ -384,13 +388,55 @@ for (i in seq_along(df)) {
 output
 ```
 
-Break it down:
+#### Break it down:
 
-```
+First predefine our output.  Do this when you can as it speeds up loops in R significantly.
+
+```{r, eval = FALSE}
 output = vector("double", ncol(df))
 ```
 
-First predefine our output
+Next we need something to loop over, something that changes with each turn of the loop. `seq_along()` does the trick here, but this can really be anything
+```{r}
+seq_along(df)
+
+# equivalently
+1:ncol(df)
+
+1:3
+
+```
+
+Now we have the variable `i` which changes each pass of the loop.  We can use this to calculate the mean of each column using what we learned about subsetting.
+```{r, eval = FALSE}
+output[[i]] = mean(df[[i]])
+```
+
+Bonus: Why do we have to use `[[` here?
+
+#### Some notes on loops
+
+* The code that you want to be evaluated in the loop must be between the curly brackes `{}`.
+* A more general loop, the `while` loop can also be used but is not often seen in R code.
+* In R, looping over very large objects, for example a data frame with a million rows, can be very slow, especially if you don't predefine your output.
+* For this reason, in many cases it is usually more efficient and often cleaner to use an `apply` function.
+
+### Apply
+
+The apply family of functions can be some of the most useful but most confusing functions to use.  They are both fast and powerful but do remember that loops work too, despite what you might read in forums.
+
+Here we'll just a brief introduction so you are familiar with them, as they are topic more suitable for an advanced workshop.
+
+
+
+
+
+
+
+
+
+
+
 
 
 ## Other important key R functions 
